# ThreeTurkey

./: .env.example  .gitignore  Dockerfile  pyproject.toml
seo_saas/: config.py  deps.py  server.py
seo_saas/routes/: admin.py  audit.py  auth.py  briefs.py  checkout.py  content_gaps.py  dashboard.py  insights.py  keywords.py  waitlist.py
seo_saas/services/: audit_engine.py  brief_generator.py  content_gaps.py  crawler.py  google_analytics.py  google_auth.py  google_search_console.py  insights_engine.py  keyword_engine.py  openai_client.py
seo_saas/static/: dashboard.html  index.html  robots.txt  sitemap.xml
seo_saas/static/css/: landing.css
seo_saas/static/js/: landing.js
seo_saas/storage/: database.py  schema.sql
