[project]
name = "marqet"
version = "0.1.0"
description = "AI-powered SEO platform for small/medium orgs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest", "pytest-asyncio"]
