[project]
name = "threeturkey"
version = "0.1.0"
description = "AI-powered SEO platform for small/medium orgs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest", "pytest-asyncio"]
